ex-treamer/templates/01-incoming-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-08-11T22:00:25Z"
  generation: 2
  labels:
    app: extreamer-incoming
  name: extreamer-incoming
  namespace: default
  resourceVersion: "13099"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/extreamer-incoming
  uid: d324715d-b42a-4123-931d-9a5f341c1574
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: extreamer-incoming
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: extreamer-incoming
    spec:
      containers:
      - image: extreamapp/extreamer-incoming:latest
        imagePullPolicy: Always
        name: extreamer-incoming-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-08-11T22:00:34Z"
    lastUpdateTime: "2020-08-11T22:00:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-08-11T22:00:25Z"
    lastUpdateTime: "2020-08-11T22:00:34Z"
    message: ReplicaSet "extreamer-incoming-7dfdd56cf6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
